GNOME Bugzilla – Bug 673539
gkbd_keyboard_config_options_equals: fix comparison of options
Last modified: 2012-04-05 14:48:30 UTC
Because of a problem in some recent changes, if your config has the same number of options as the default config, it won't load - the comparison of the option values always succeeds.
Created attachment 211348 [details] [review] gkbd_keyboard_config_options_equals: fix comparison of options Since gkbd_keyboard_config_split_items uses static storage, if we want to call it twice and compare the results we have to make a copy.
Committed to master branch
argh, I just totally fail at calling that function. Thanks for fixing.