gkbd_keyboard_config_options_equals: fix comparison of options

Since gkbd_keyboard_config_split_items uses static storage, if
we want to call it twice and compare the results we have to
make a copy.

https://bugzilla.gnome.org/show_bug.cgi?id=673539